# calculatrice

./: CMakeLists.txt  README.MD  calculatrice.code-workspace
data/: history.txt
include/: calculator.hpp  colors.hpp  commands.hpp  history.hpp
src/: calculator.cpp  commands.cpp  history.cpp  main.cpp
tests/: test_calculator.cpp
